Added Player Controls

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+    <img id="player" src="assets/player.png" />
 
     <script type="module" src="main.js"></script>
   </body>
