--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+
     <img id="player" src="assets/player.png" />
     <img id="layer1" src="assets/layer-1.png" />
     <img id="layer2" src="assets/layer-2.png" />
     <img id="layer3" src="assets/layer-3.png" />
     <img id="layer4" src="assets/layer-4.png" />
     <img id="layer5" src="assets/layer-5.png" />
+    <img id="enemy_fly" src="assets/enemy1.png" />
+    <img id="enemy_plant" src="assets/enemy2.png" />
+    <img id="enemy_spider" src="assets/enemy3.png" />
 
     <script type="module" src="main.js"></script>
   </body>
