collision annimations, dive stata, particle animations added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <img id="enemy_fly" src="assets/enemy1.png" />
     <img id="enemy_plant" src="assets/enemy2.png" />
     <img id="enemy_spider" src="assets/enemy3.png" />
+    <img id="fire" src="assets/fire.png" />
+    <img id="collisionAnnimation" src="assets/boom.png" />
 
     <script type="module" src="main.js"></script>
   </body>
