circular collisions added, optimized and cleaned the code

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Robot</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-
     <img id="player" src="assets/player.png" />
     <img id="layer1" src="assets/layer-1.png" />
     <img id="layer2" src="assets/layer-2.png" />
@@ -19,8 +24,9 @@
     <img id="enemy_fly" src="assets/enemy1.png" />
     <img id="enemy_plant" src="assets/enemy2.png" />
     <img id="enemy_spider" src="assets/enemy3.png" />
-    <img id="fire" src="assets/fire.png" />
+    <img id="fire" src="assets/light.png" />
     <img id="collisionAnnimation" src="assets/boom.png" />
+    <img id="lives" src="assets/heart.png" />
 
     <script type="module" src="main.js"></script>
   </body>
