--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Robot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,17 +9,37 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body id="body">
     <canvas id="canvas1"></canvas>
+
+    <h3 id="h3">Press Space to navigate</h3>
+
+
+    <img id="back"src="assets/background.webp" >
+    <img id="page" class="page" src="assets/page1.png" />
+
+
+    <h1 id="h1">Robot: The Savior</h1>
+    <button id="nextButton">PLAY NOW!</button>
+
+    <button id="retry">Play Again!</button>
+
+
+    <img id="screen"src="assets/screen.png" alt="">
+
+
     <img id="player" src="assets/player.png" />
     <img id="layer1" src="assets/layer-1.png" />
     <img id="layer2" src="assets/layer-2.png" />
     <img id="layer3" src="assets/layer-3.png" />
     <img id="layer4" src="assets/layer-4.png" />
     <img id="layer5" src="assets/layer-5.png" />
-    <img id="enemy_fly" src="assets/enemy1.png" />
+
+
+    <img id="enemy_fly" src="assets/enemy_bat_1.png" />
     <img id="enemy_plant" src="assets/enemy2.png" />
-    <img id="enemy_spider" src="assets/enemy3.png" />
+
+
     <img id="fire" src="assets/light.png" />
     <img id="collisionAnnimation" src="assets/boom.png" />
     <img id="lives" src="assets/heart.png" />
